--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -35,16 +35,16 @@ jobs:
         KERNEL: 3.4
       run: |
         if [ $KERNEL = "4.4" ] ; then
-        git clone --depth=1 https://github.com/MeIsReallyBa/padavan-4.4.git /opt/rt-n56u
+        git clone --depth=1 https://github.com/dawuzh/mt7620-rt5592epl/tree/master/trunk/configs/boards/MT7620RT5592
         else
-        git clone --depth=1 https://github.com/chongshengB/rt-n56u.git /opt/rt-n56u
+        git clone --depth=1 https://github.com/dawuzh/mt7620-rt5592epl/tree/master/trunk/configs/boards/MT7620RT5592
         fi
         cd /opt/rt-n56u/toolchain-mipsel
         sh dl_toolchain.sh
         mkdir -p /opt/images/
     - name: Build Firmware
       env:
-        TNAME: K2P
+        TNAME: kernel-3.4.x
         KERNEL: 3.4
       run: |
         cd /opt/rt-n56u/trunk
