--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -35,9 +35,9 @@ jobs:
         KERNEL: 3.4
       run: |
         if [ $KERNEL = "4.4" ] ; then
-        git clone --depth=1 https://github.com/dawuzh/mt7620-rt5592epl/blob/master/trunk/configs/boards/MT7620RT5592
+        git clone --depth=1 https://github.com/dawuzh/mt7620-rt5592epl/blob/master/trunk/configs/boards/MT7620RT5592 /opt/rt-n56u
         else
-        git clone --depth=1 https://github.com/dawuzh/mt7620-rt5592epl/blob/master/trunk/configs/boards/MT7620RT5592
+        git clone --depth=1 https://github.com/dawuzh/mt7620-rt5592epl/blob/master/trunk/configs/boards/MT7620RT5592 /opt/rt-n56u
         fi
         cd /opt/rt-n56u/toolchain-mipsel
         sh dl_toolchain.sh
